--- a/class-05/demo/css-demo/css/positioning.css
+++ b/class-05/demo/css-demo/css/positioning.css
@@ -1,9 +1,20 @@
-
+* {
+  box-sizing: border-box;
+}
 h1 {
   font-size: 2rem;
   margin: 1rem
 }
-
 h2 {
   font-weight: bold;
+}
+section  {
+  border: medium solid red;
+  margin: 1rem;
+  padding: 1rem;
+}
+article {
+  border: medium solid black;
+  margin: 1rem;
+  padding: 1rem;
 }
