--- a/class-05/demo/css-demo/css/layout.css
+++ b/class-05/demo/css-demo/css/layout.css
@@ -1,8 +1,47 @@
-
+* {
+  box-sizing: border-box;
+}
 h1 {
   font-size: 2rem;
   margin: 1rem
 }
 h2 {
   font-weight: bold;
+}
+section, span {
+  border: medium solid red;
+  /* border-width: 50px;
+  border-style: dashed;
+  border-color: red; */
+  width: 80%;
+  /* margin: auto;
+  margin-top: 5rem; */
+
+  /* It goes clockwise starting at the top
+        top, right, bottom, left
+  */
+  margin: 5rem auto 0 auto;
+  /* margin-top: 5rem;
+  margin-right: auto;
+  margin-bottom: 0; */
+  /* overflow: auto; */
+}
+
+div {
+  border: medium solid black;
+  margin: 1rem;
+  padding: 1rem;
+  /* float: left; */
+  width: max-content;
+
+}
+
+div#three {
+  border-color: blue;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
